SLVS-2425 Implement feedback